--- a/Makefile.config
+++ b/Makefile.config
@@ -76,7 +76,8 @@ BLAS := mkl
 # Uncomment to use Python 3 (default is Python 2)
 PYTHON_LIBRARIES := boost_python3 python3.6m
 PYTHON_INCLUDE := /usr/include/python3.6m \
-                "${HOME}"/.local/lib/python3.6/site-packages/numpy
+                "${HOME}"/.local/lib/python3.6/site-packages/numpy \
+                "${HOME}"/.local/lib/python3.6/site-packages/numpy/core/include \
 
 # /usr/lib/python3.5/dist-packages/numpy/core/include
 				
